# Renderer-Project

hw2/: CMakeLists.txt  README.md  main.cpp
hw3/: Triangle.cpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw4/: CMakeLists.txt  README.md  Texture.hpp  main.cpp  rasterizer.cpp
hw5/: main.cpp
hw6/: AreaLight.hpp  CMakeLists.txt  Light.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
hw7/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Renderer.hpp  Triangle.hpp
